# cenco

./: .env.dist  .gitignore  README.md  p3.ipynb  pyproject.toml  tox.ini
cencosud/: __init__.py  exc.py  reflect_db.py  session.py  settings.py  sql.py
tests/: test_cencosud.py
